[package]
name = "mpk2json"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Small CLI tool to convert MessagePack files to JSON"
homepage = "https://github.com/jameshiew/mpk2json"
repository = "https://github.com/jameshiew/mpk2json"
readme = "README.md"
rust-version = "1.78.0"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
rmp-serde = "1.3.0"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde_json = "1.0.145"
